WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133494
ArrayIterator should not be exposed in Safari 8
https://bugs.webkit.org/show_bug.cgi?id=133494
Summary
ArrayIterator should not be exposed in Safari 8
Jordan Harband
Reported
2014-06-03 17:22:50 PDT
In Safari 8: - Object.prototype.toString.call(ArrayIterator) === '[object Function'] - typeof ArrayIterator !== 'function' - ArrayIterator() // throws However, none of this is relevant, because the ES6 spec requires that ArrayIterator not be exposed. Per
https://twitter.com/ohunt/status/473981524983812096
and
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-array-iterator-objects
This breaks the es6-shim, and potentially any code that doesn't expect the ArrayIterator global to be defined - or attempts to use it like a standard JS object.
Attachments
Patch
(4.81 KB, patch)
2014-06-04 13:15 PDT
,
Oliver Hunt
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2014-06-04 13:15:33 PDT
Created
attachment 232494
[details]
Patch
Michael Saboff
Comment 2
2014-06-04 13:21:17 PDT
Comment on
attachment 232494
[details]
Patch r=me
Oliver Hunt
Comment 3
2014-06-04 14:55:18 PDT
Committed
r169598
: <
http://trac.webkit.org/changeset/169598
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug