ArrayIterator should not be exposed in Safari 8 https://bugs.webkit.org/show_bug.cgi?id=133494

Reviewed by Michael Saboff.

Source/JavaScriptCore:
Separate out types that require constructor objects, and don't
include the iterator types in that list.

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::reset):
* runtime/JSGlobalObject.h:

LayoutTests:
Add tests.

* js/no-iterator-constructors.html: Added.
* js/script-tests/no-iterator-constructors.js: Added.

Canonical link: https://commits.webkit.org/151527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169598 268f45cc-cd09-0410-ab3c-d52691b4dbfc